--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>Die Hausautomatisierung besteht aus einer Reihe von Modulen, die ueber den CAN Bus miteinander kommunizieren. Die eigentliche Arbeit erledigen die Controller-Module: hier sind Relais zum Schalten von 230V-Lasten und Sensoren wie Taster, Reedkontakte, Temperatur-Sensoren etc angeschlossen.</p>
 
-<p>Bedient wird die Hausautomatisierung ueber die Bedienfelder, kleine Unterputz- Module mit einen LCD-Display und ein paar Tastern. Hier kann man z.B. die Raumtemperatur einstellen, Stati abfragen etc. Triviale Dinge wie Licht einschalten o.ae. kann natuerlich weiterhin per Taster gemacht werden.</p>
+<p>Bedient wird die Hausautomatisierung ueber eine Weboberflaeche, die Bedienfelder, kleine Unterputz- Module mit einen LCD-Display und ein paar Tastern. Hier kann man z.B. die Raumtemperatur einstellen, Stati abfragen etc. Triviale Dinge wie Licht einschalten o.ae. kann natuerlich weiterhin per Taster gemacht werden.</p>
 
 <p>Zur Wartung und komfortableren Bedienung ist der CAN-Bus ueber das oben bereits erwaehnte Hostinterface an einen Host-Rechner angebunden. Bisher existiert mit telican ein Werkzeug zur Wartung und Konfiguration.</p>
 
@@ -43,10 +43,18 @@
 <p>Motivation
 HCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu einer proprietaeren) Hausautomatisierung zu realisieren. Primaer entwickle ich HCAN fuer unser Haus; dem OpenSource Gedanken folgendend ist es unter der GNU Public License veroeffentlicht.</p>
 
-<p><a href="https://github.com/hcanIngo/openHCAN/wiki">https://github.com/hcanIngo/openHCAN/wiki</a></p>
+<p><a href="Mailingliste">https://groups.google.com/forum/?hl=de#!forum/openhcan</a></p>
       </section>
     </div>
-
+<p><a href="Forum">http://openhcan.org</a></p>
+      </section>
+    </div>
+<p><a href="Wiki">https://github.com/hcanIngo/openHCAN/wiki</a></p>
+      </section>
+    </div>
+<p><a href="Quellen">https://github.com/hcanIngo/openHCAN</a></p>
+      </section>
+    </div>
     
   </body>
 </html>
