--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 <p>Motivation
 HCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu einer proprietaeren) Hausautomatisierung zu realisieren. Primaer entwickle ich HCAN fuer unser Haus; dem OpenSource Gedanken folgendend ist es unter der GNU Public License veroeffentlicht.</p>
 
-<p><a href="Mailingliste">https://groups.google.com/forum/?hl=de#!forum/openhcan</a></p>
+<p><a href="https://groups.google.com/forum/?hl=de#!forum/openhcan">Mailingliste</a></p>
       </section>
     </div>
 
-<p><a href="Forum">http://openhcan.org</a></p>
+<p><a href="http://openhcan.org">Forum</a></p>
       </section>
     </div>
 
-<p><a href="Wiki">https://github.com/hcanIngo/openHCAN/wiki</a></p>
+<p><a href="https://github.com/hcanIngo/openHCAN/wiki">Wiki</a></p>
       </section>
     </div>
 
-<p><a href="Quellen">https://github.com/hcanIngo/openHCAN</a></p>
+<p><a href="https://github.com/hcanIngo/openHCAN">Quellen</a></p>
       </section>
     </div>
     
