--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>openHCAN</h1>
-        <h2>openHCAN Webseite/Forum</h2>
+        <h2>openHCAN Webseite</h2>
 
         <section id="downloads">
           <a href="https://github.com/hcanIngo/openHCAN/zipball/master" class="btn">Download as .zip</a>
