--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
         <h2>openHCAN Webseite</h2>
 
         <section id="downloads">
+          <a href="https://github.com/hcanIngo/openHCAN/wiki" class="btn"><span class="icon"></span>Wiki</a>
+          <a href="https://groups.google.com/forum/?hl=de#!forum/openhcan" class="btn"><span class="icon"></span>Mailingliste</a>
+          <a href="http://openhcan.org" class="btn"><span class="icon"></span>Forum</a>
+          <a href="https://github.com/hcanIngo/openHCAN" class="btn"><span class="icon"></span>Quellen</a>
           <a href="https://github.com/hcanIngo/openHCAN/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/hcanIngo/openHCAN/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/hcanIngo/openHCAN" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+
         </section>
       </div>
     </header>
@@ -43,9 +47,9 @@
 <p>Motivation
 HCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu einer proprietaeren) Hausautomatisierung zu realisieren. Primaer entwickle ich HCAN fuer unser Haus; dem OpenSource Gedanken folgendend ist es unter der GNU Public License veroeffentlicht.</p>
 
-<p><a href="https://groups.google.com/forum/?hl=de#!forum/openhcan">Mailingliste | </a>
-<a href="http://openhcan.org">Forum | </a>
-<a href="https://github.com/hcanIngo/openHCAN/wiki">Wiki | </a>
+<p><a href="https://groups.google.com/forum/?hl=de#!forum/openhcan">Mailingliste</a> | 
+<a href="http://openhcan.org">Forum</a> | 
+<a href="https://github.com/hcanIngo/openHCAN/wiki">Wiki </a> | 
 <a href="https://github.com/hcanIngo/openHCAN">Quellen</a></p>
       </section>
     </div>
