--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <h1>openHCAN</h1>
         <h2>openHCAN Webseite</h2>
 
-        <section id="downloads">
+        <section id="links">
           <a href="https://github.com/hcanIngo/openHCAN/wiki" class="btn"><span class="icon"></span>Wiki</a>
           <a href="https://groups.google.com/forum/?hl=de#!forum/openhcan" class="btn"><span class="icon"></span>Mailingliste</a>
           <a href="http://openhcan.org" class="btn"><span class="icon"></span>Forum</a>
           <a href="https://github.com/hcanIngo/openHCAN" class="btn"><span class="icon"></span>Quellen</a>
+        </section>
+        
+        <section id="downloads">
           <a href="https://github.com/hcanIngo/openHCAN/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/hcanIngo/openHCAN/tarball/master" class="btn">Download as .tar.gz</a>
-
         </section>
       </div>
     </header>
@@ -49,7 +51,7 @@ HCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu ein
 
 <p><a href="https://groups.google.com/forum/?hl=de#!forum/openhcan">Mailingliste</a> | 
 <a href="http://openhcan.org">Forum</a> | 
-<a href="https://github.com/hcanIngo/openHCAN/wiki">Wiki </a> | 
+<a href="https://github.com/hcanIngo/openHCAN/wiki">Wiki</a> | 
 <a href="https://github.com/hcanIngo/openHCAN">Quellen</a></p>
       </section>
     </div>
