--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
 <p>Fuer den eigentlichen Busbetrieb ist aber kein PC noetig - die Module sind voellig autark funktionsfaehig. Sollte also der Rechner ausfallen, so funktionieren Licht, Rollaeden, Heizung etc weiterhin.</p>
 
-<p>Motivation: 
-openHCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu einer proprietaeren) Hausautomatisierung zu realisieren. Dem OpenSource Gedanken folgendend ist openHCAN unter der GNU Public License veroeffentlicht.</p>
+<p>openHCAN wurde aus der Motivation heraus entwickelt, eine freie (im Gegensatz zu einer proprietaeren) Hausautomatisierung zu realisieren. Dem OpenSource Gedanken folgendend ist openHCAN unter der GNU Public License veroeffentlicht.</p>
 
 <p><a href="https://groups.google.com/forum/?hl=de#!forum/openhcan">Mailingliste</a> | 
 <a href="http://openhcan.org">Forum</a> | 
