--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>openHCAN by hcanIngo</title>
+    <title>openHCAN @ 2016</title>
   </head>
 
   <body>
@@ -26,8 +26,8 @@
         </section>
         
         <section id="downloads">
-          <a href="https://github.com/hcanIngo/openHCAN/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/hcanIngo/openHCAN/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/hcanIngo/openHCAN/zipball/master" class="btn">Download .zip</a>
+          <a href="https://github.com/hcanIngo/openHCAN/tarball/master" class="btn">Download .tar.gz</a>
         </section>
       </div>
     </header>
