--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>Bedient wird die Hausautomatisierung ueber eine Weboberflaeche, die Bedienfelder, kleine Unterputz- Module mit einen LCD-Display und ein paar Tastern. Hier kann man z.B. die Raumtemperatur einstellen, Stati abfragen etc. Triviale Dinge wie Licht einschalten o.ae. kann natuerlich weiterhin per Taster gemacht werden.</p>
 
-<p>Zur Wartung und komfortableren Bedienung ist der CAN-Bus ueber das oben bereits erwaehnte Hostinterface an einen Host-Rechner angebunden. Bisher existiert mit telican ein Werkzeug zur Wartung und Konfiguration.</p>
+<p>Zur Wartung und komfortableren Bedienung ist der CAN-Bus ueber das oben bereits erwaehnte Hostinterface an einen Host-Rechner angebunden. Mit telican existiert ein Werkzeug zur Wartung und Konfiguration.</p>
 
 <p>Fuer den eigentlichen Busbetrieb ist aber kein PC noetig - die Module sind voellig autark funktionsfaehig. Sollte also der Rechner ausfallen, so funktionieren Licht, Rollaeden, Heizung etc weiterhin.</p>
 
