--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>openHCAN - Hausautomatisierung</title>
+    <title>openHCAN - HCAN - Hausautomatisierung</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>openHCAN</h1>
-        <h2>openHCAN Webseite</h2>
+        <h1>open openHCAN - HCAN </h1>
+        <h2>open openHCAN - HCAN  Webseite</h2>
 
         <section id="links">
           <a href="https://groups.google.com/forum/?hl=de#!forum/openhcan" class="btn"><span class="icon"></span>Mailingliste</a>
@@ -35,7 +35,7 @@
       <section id="main_content">
         <p><a href="https://github.com/hcanIngo/openHCAN/wiki"><img src="https://cloud.githubusercontent.com/assets/4243148/11915822/1885c376-a6b8-11e5-8410-8ad30d1e1734.png" alt="logo_open"></a></p>
 
-<p>openHCAN ist eine Hausautomatisierungsloesung auf CAN-Bus Basis. Zielgruppe ist der versierte Anwender oder Entwickler.</p>
+<p>openHCAN - HCAN ist eine Hausautomatisierungsloesung auf CAN-Bus Basis. Zielgruppe ist der versierte Anwender oder Entwickler.</p>
 
 <p>Die Hausautomatisierung besteht aus einer Reihe von Modulen, die ueber den CAN Bus miteinander kommunizieren. Die eigentliche Arbeit erledigen die Controller-Module: hier sind Relais zum Schalten von 230V-Lasten und Sensoren wie Taster, Reedkontakte, Temperatur-Sensoren etc angeschlossen.</p>
 
